--- a/ps3_pair.qmd
+++ b/ps3_pair.qmd
@@ -1,6 +1,6 @@
 ---
 title: "30538 Problem Set 3: git pair"
-author: "Charisma Lambert"
+author: "Prashanthi Subbiah"
 format: 
   pdf:
     include-in-header: 
